# nitpicker

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: nitpicker-manual-dogfood.yml
src/: agent.rs  compact.rs  config.rs  debate.rs  llm.rs  main.rs  pr.rs  prompts.rs  provider.rs  review.rs  tools.rs
src/gemini_proxy/: client.rs  mod.rs  proxy.rs  retry.rs
