[package]
name = "nitpicker"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
default-run = "nitpicker"

[[bin]]
name = "nitpicker"
path = "src/main.rs"

[workspace]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "time", "sync", "net"] }
rig-core = "0.31.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
indicatif = "0.18"
termimad = "0.31"
regex = "1"
toml = "1"

# Gemini proxy dependencies
axum = "0.8"
reqwest = { version = "0.13", features = ["json", "form"] }
oauth2 = "5"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand = "0.9"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
url = "2"
webbrowser = "1"
tempfile = "3"
